--- a/PagInicial/index.html
+++ b/PagInicial/index.html
@@ -29,7 +29,7 @@
                                 <li>Professores</li>
                                 <li>Notícias</li>
                                 <li>Modo Escuro</li>
-                                <li>Definições </li>
+                                <li id="Def">Definições </li>
                                 <li>Ajuda</li>
                                 <li>Terminar Sessão</li>
                             </ul>
