--- a/PagInicial/index.html
+++ b/PagInicial/index.html
@@ -18,27 +18,25 @@
                 <ul>
                     <li><span class="material-symbols-outlined">search</span></li>
                     <li id="menu"><span  class="material-symbols-outlined">menu</span></li>
-                    <div>
-                        
-                        <menu>
-                            <ul id="menu-escondido">
-                                <li>Perfil</li>
-                                <li>Chat</li>
-                                <li>Páginas</li>
-                                <li>Horários</li>
-                                <li>Professores</li>
-                                <li>Notícias</li>
-                                <li>Modo Escuro</li>
-                                <li id="Def">Definições </li>
-                                <li>Ajuda</li>
-                                <li>Terminar Sessão</li>
-                            </ul>
-                        </menu>
-                    </div>
+                    
+                          <nav id="nav-menu">
+                                <ul id="menu-escondido" class="fechado">
+                                    <li>Perfil</li>
+                                    <li>Chat</li>
+                                    <li>Páginas</li>
+                                    <li>Horários</li>
+                                    <li>Professores</li>
+                                    <li>Notícias</li>
+                                    <li>Modo Escuro</li>
+                                    <li id="Def">Definições </li>
+                                    <li>Ajuda</li>
+                                    <li>Terminar Sessão</li>
+                                </ul>
+                            </nav>
                 </ul>
             </div>
             <nav>
-                <ul>
+                <ul id="navgeter">
                     <li><span class="material-symbols-outlined">home</span></li>
                     <li><span class="material-symbols-outlined">people</span></li>
                     <li><span class="material-symbols-outlined">sms</span></li>
