--- a/PagInicial/index.html
+++ b/PagInicial/index.html
@@ -20,7 +20,7 @@
                     <li id="menu"><span  class="material-symbols-outlined">menu</span></li>
                     
                           <nav id="nav-menu">
-                                <ul id="menu-escondido" class="fechado">
+                                <ul id="menu-escondido" class="inicio">
                                     <li>Perfil</li>
                                     <li>Chat</li>
                                     <li>Páginas</li>
