--- a/PagInicial/index.html
+++ b/PagInicial/index.html
@@ -38,7 +38,7 @@
             <nav>
                 <ul id="navgeter">
                     <li><span class="material-symbols-outlined">home</span></li>
-                    <li><span class="material-symbols-outlined">people</span></li>
+                    <li><span class="material-symbols-outlined"><a href="amigos.html">people</a></span></li>
                     <li><span class="material-symbols-outlined">sms</span></li>
                     <li><span class="material-symbols-outlined">notifications</span></li>
                 </ul>
