--- a/PagInicial/index.html
+++ b/PagInicial/index.html
@@ -21,7 +21,7 @@
                     
                           <nav id="nav-menu">
                                 <ul id="menu-escondido" class="inicio">
-                                    <li>Perfil</li>
+                                    <li id="up-li">Perfil</li>
                                     <li>Chat</li>
                                     <li>Páginas</li>
                                     <li>Horários</li>
@@ -30,7 +30,7 @@
                                     <li>Modo Escuro</li>
                                     <li id="Def">Definições </li>
                                     <li>Ajuda</li>
-                                    <li>Terminar Sessão</li>
+                                    <li id="bottom-li">Terminar Sessão</li>
                                 </ul>
                             </nav>
                 </ul>
@@ -55,10 +55,9 @@
             </div>
         <div id="feed">
             <div class="outros">
-                <button class="btn pr">foto</button>
+                <img src="" alt="foto">
                 <p class="nome">Edvaldo João</p>
-                <p id="pt">...</p>
-                <p id="x">x</p>
+                <span class="material-symbols-outlined" class="ocult">close</span>
             </div>
             <div class="conteudo">
                 <p>Temos um projecto mas nenhum de nós tem PC que triste kkkk</p>
@@ -66,10 +65,9 @@
         </div>
         <div id="feed">
             <div class="outros">
-                <button class="btn pr">foto</button>
+                <img src="" alt="foto">
                 <p class="nome">Victor Makuka</p>
-                <p id="pt">...</p>
-                <p id="x">x</p>
+                <span class="material-symbols-outlined" class="ocult">close</span>
             </div>
             <div class="conteudo">
                 <p>Opah, eu sou Dono dos pães <br> Tenho padeiros incriveis</p>
@@ -77,10 +75,9 @@
         </div>
         <div id="feed">
             <div class="outros">
-                <button class="btn pr">foto</button>
+                <img src="" alt="foto">
                 <p class="nome">Abilio Sandundo</p>
-                <p id="pt">...</p>
-                <p id="x">x</p>
+                <span class="material-symbols-outlined" class="ocult">close</span>
             </div>
             <div class="conteudo">
                 <p>Sou dono das <b>Anas</b> Cuidado! <br> Vossas Anas são minhas, não é atoa que meu apelido é 3XAna kkk</p>
@@ -88,10 +85,9 @@
         </div> 
         <div id="feed">
             <div class="outros">
-                <button class="btn pr">foto</button>
+                <img src="" alt="foto">
                 <p class="nome">Cristiano Eduardo</p>
-                <p id="pt">...</p>
-                <p id="x">x</p>
+                <span class="material-symbols-outlined" id="ocult">close</span>
             </div>
             <div class="conteudo">
                 <p>Como vai pesseoal, esta logo do Maka news é muito boa, entrem rede social, que vão gostar kkk</p>
@@ -100,10 +96,9 @@
         </div>
         <div id="feed">
             <div class="outros">
-                <button class="btn pr">foto</button>
+                <img src="" alt="foto">
                 <p class="nome">Aricleni Martins</p>
-                <p id="pt">...</p>
-                <p id="x">x</p>
+                <span class="material-symbols-outlined" class="ocult">close</span>
             </div>
             <div class="conteudo">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, mollitia velit. Suscipit, architecto, adipisci assumenda reprehenderit i</p>
@@ -111,10 +106,9 @@
         </div>
         <div id="feed">
             <div class="outros">
-                <button class="btn pr">foto</button>
+                <img src="foto" alt="foto">
                 <p class="nome">Kennedy Victor</p>
-                <p id="pt">...</p>
-                <p id="x">x</p>
+                <span class="material-symbols-outlined" class="ocult">close</span>
             </div>
             <div class="conteudo">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique eaque corrupti id, minima ipsam aperiam, necessitatibus doloribus quas nemo quam magni tot</p>
