--- a/PagInicial/index.html
+++ b/PagInicial/index.html
@@ -53,68 +53,21 @@
                 <input type="text" id="pub" name="pub" placeholder="Publicar no feed">
                 <button class="btn">foto</button>
             </div>
-        <div id="feed">
-            <div class="outros">
-                <img src="" alt="foto">
-                <p class="nome">Edvaldo João</p>
-                <span class="material-symbols-outlined" class="ocult">close</span>
+       
+        <section id="feed">
+            <div class="idPerfil">
+                <img src="/img/350093882_222349753918133_5370605897052269088_n.jpg" alt="foto de perfil" class="fotos">
+                <label for="foto">Edvaldo João</label>
             </div>
-            <div class="conteudo">
-                <p>Temos um projecto mas nenhum de nós tem PC que triste kkkk</p>
-            </div>
-        </div>
-        <div id="feed">
-            <div class="outros">
-                <img src="" alt="foto">
-                <p class="nome">Victor Makuka</p>
-                <span class="material-symbols-outlined" class="ocult">close</span>
-            </div>
-            <div class="conteudo">
-                <p>Opah, eu sou Dono dos pães <br> Tenho padeiros incriveis</p>
-            </div>
-        </div>
-        <div id="feed">
-            <div class="outros">
-                <img src="" alt="foto">
-                <p class="nome">Abilio Sandundo</p>
-                <span class="material-symbols-outlined" class="ocult">close</span>
-            </div>
-            <div class="conteudo">
-                <p>Sou dono das <b>Anas</b> Cuidado! <br> Vossas Anas são minhas, não é atoa que meu apelido é 3XAna kkk</p>
-            </div>
-        </div> 
-        <div id="feed">
-            <div class="outros">
-                <img src="" alt="foto">
-                <p class="nome">Cristiano Eduardo</p>
+            <div class="Configuracao">
                 <span class="material-symbols-outlined" id="ocult">close</span>
             </div>
-            <div class="conteudo">
-                <p>Como vai pesseoal, esta logo do Maka news é muito boa, entrem rede social, que vão gostar kkk</p>
-                <img src="../img/350093882_222349753918133_5370605897052269088_n.jpg" alt="esta aqui" style="height:80%; width: 80%; margin-top: 5px;" >
+            <div class="Reacoes">
+                <button class="btn material-symbols-outlined">Like</button>
+                <button class="btn material-symbols-outlined">Comentar</button>
+                <button class="btn material-symbols-outlined">send</button>
             </div>
-        </div>
-        <div id="feed">
-            <div class="outros">
-                <img src="" alt="foto">
-                <p class="nome">Aricleni Martins</p>
-                <span class="material-symbols-outlined" class="ocult">close</span>
-            </div>
-            <div class="conteudo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, mollitia velit. Suscipit, architecto, adipisci assumenda reprehenderit i</p>
-            </div>
-        </div>
-        <div id="feed">
-            <div class="outros">
-                <img src="foto" alt="foto">
-                <p class="nome">Kennedy Victor</p>
-                <span class="material-symbols-outlined" class="ocult">close</span>
-            </div>
-            <div class="conteudo">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique eaque corrupti id, minima ipsam aperiam, necessitatibus doloribus quas nemo quam magni tot</p>
-            </div>
-        </div>
-        
+        </section>
     </main>
 
     <script src="open.js"></script>
