--- a/PagInicial/index.html
+++ b/PagInicial/index.html
@@ -17,7 +17,7 @@
                 <h1>Maka News</h1>
                 <ul>
                     <li><span class="material-symbols-outlined">search</span></li>
-                    <li id="menu"><span  class="material-symbols-outlined">menu</span></li>
+                    <li id="menu"><span  class="material-symbols-outlined" style="color: blue; font-size: 1.9em; font-weight: bolder;">widgets</span></li>
                     
                           <nav id="nav-menu">
                                 <ul id="menu-escondido" class="inicio">
@@ -56,16 +56,19 @@
        
         <section id="feed">
             <div class="idPerfil">
-                <img src="/img/350093882_222349753918133_5370605897052269088_n.jpg" alt="foto de perfil" class="fotos">
-                <label for="foto">Edvaldo João</label>
-            </div>
-            <div class="Configuracao">
+                <div id="perfilLink">
+                    <img src="/img/350093882_222349753918133_5370605897052269088_n.jpg" alt="foto de perfil" class="fotos">
+                    <label for="foto" class="nome">Edvaldo João</label>
+                </div>
                 <span class="material-symbols-outlined" id="ocult">close</span>
             </div>
-            <div class="Reacoes">
-                <button class="btn material-symbols-outlined">Like</button>
-                <button class="btn material-symbols-outlined">Comentar</button>
-                <button class="btn material-symbols-outlined">send</button>
+            <div class="conteudo">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis, hic veritatis eum rem maiores beatae culpa vero ad minus, similique nulla perferendis praesentium. Consectetur, magnam non tenetur dicta dolores reprehenderit?</p>
+            </div>
+            <div class="reacoes">
+                <button class="btn material-symbols-outlined">thumb_up</button>
+                <button class="btn material-symbols-outlined">comment</button>
+                <button class="btn material-symbols-outlined">share</button>
             </div>
         </section>
     </main>
