--- a/PagInicial/index.html
+++ b/PagInicial/index.html
@@ -16,21 +16,20 @@
             <div class="nav-up">
                 <h1>Maka News</h1>
                 <ul>
-                    <li><span class="material-symbols-outlined">search</span></li>
-                    <li id="menu"><span  class="material-symbols-outlined" style="color: blue; font-size: 1.9em; font-weight: bolder;">widgets</span></li>
+                    <li><span class="material-symbols-outlined" style=" font-size: 1.9em;">search</span></li>
+                    <li id="menu"><span  class="material-symbols-outlined" style="color: rgb(8, 123, 230);; font-size: 1.9em; font-weight: bolder;">widgets</span></li>
                     
                           <nav id="nav-menu">
                                 <ul id="menu-escondido" class="inicio">
-                                    <li id="up-li">Perfil</li>
-                                    <li>Chat</li>
-                                    <li>Páginas</li>
-                                    <li>Horários</li>
-                                    <li>Professores</li>
-                                    <li>Notícias</li>
-                                    <li>Modo Escuro</li>
-                                    <li id="Def">Definições </li>
-                                    <li>Ajuda</li>
-                                    <li id="bottom-li">Terminar Sessão</li>
+                                    <li id="up-li"><img src="/img/350093882_222349753918133_5370605897052269088_n.jpg" alt="fotoperfil"></li>
+                                    
+                                    <li class="li-normal">Horários</li>
+                                    <li class="li-normal">Professores</li>
+                                    <li class="li-normal">Notícias</li>
+                                    <li class="li-normal">Modo Escuro</li>
+                                    <li id="Def" class="li-normal">Definições </li>
+                                    <li class="li-normal">Ver Termos</li>
+                                    <li id="bottom-li" class="li-normal">Terminar Sessão</li>
                                 </ul>
                             </nav>
                 </ul>
@@ -58,12 +57,183 @@
             <div class="idPerfil">
                 <div id="perfilLink">
                     <img src="/img/350093882_222349753918133_5370605897052269088_n.jpg" alt="foto de perfil" class="fotos">
-                    <label for="foto" class="nome">Edvaldo João</label>
+                    <label for="foto" class="nome">Maka News</label>
                 </div>
                 <span class="material-symbols-outlined" id="ocult">close</span>
             </div>
             <div class="conteudo">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis, hic veritatis eum rem maiores beatae culpa vero ad minus, similique nulla perferendis praesentium. Consectetur, magnam non tenetur dicta dolores reprehenderit?</p>
+            </div>
+            <div class="reacoes">
+                <button class="btn material-symbols-outlined">thumb_up</button>
+                <button class="btn material-symbols-outlined">comment</button>
+                <button class="btn material-symbols-outlined">share</button>
+            </div>
+        </section>
+        <section id="feed">
+            <div class="idPerfil">
+                <div id="perfilLink">
+                    <img src="/img/350093882_222349753918133_5370605897052269088_n.jpg" alt="foto de perfil" class="fotos">
+                    <label for="foto" class="nome">Maka News</label>
+                </div>
+                <span class="material-symbols-outlined" id="ocult">close</span>
+            </div>
+            <div class="conteudo">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis, hic veritatis eum rem maiores beatae culpa vero ad minus, similique nulla perferendis praesentium. Consectetur, magnam non tenetur dicta dolores reprehenderit?</p>
+            </div>
+            <div class="reacoes">
+                <button class="btn material-symbols-outlined">thumb_up</button>
+                <button class="btn material-symbols-outlined">comment</button>
+                <button class="btn material-symbols-outlined">share</button>
+            </div>
+        </section>
+        <section id="feed">
+            <div class="idPerfil">
+                <div id="perfilLink">
+                    <img src="/img/350093882_222349753918133_5370605897052269088_n.jpg" alt="foto de perfil" class="fotos">
+                    <label for="foto" class="nome">Maka News</label>
+                </div>
+                <span class="material-symbols-outlined" id="ocult">close</span>
+            </div>
+            <div class="conteudo">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis, hic veritatis eum rem maiores beatae culpa vero ad minus, similique nulla perferendis praesentium. Consectetur, magnam non tenetur dicta dolores reprehenderit?</p>
+            </div>
+            <div class="reacoes">
+                <button class="btn material-symbols-outlined">thumb_up</button>
+                <button class="btn material-symbols-outlined">comment</button>
+                <button class="btn material-symbols-outlined">share</button>
+            </div>
+        </section>
+        <section id="feed">
+            <div class="idPerfil">
+                <div id="perfilLink">
+                    <img src="/img/350093882_222349753918133_5370605897052269088_n.jpg" alt="foto de perfil" class="fotos">
+                    <label for="foto" class="nome">Maka News</label>
+                </div>
+                <span class="material-symbols-outlined" id="ocult">close</span>
+            </div>
+            <div class="conteudo">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis, hic veritatis eum rem maiores beatae culpa vero ad minus, similique nulla perferendis praesentium. Consectetur, magnam non tenetur dicta dolores reprehenderit?</p>
+            </div>
+            <div class="reacoes">
+                <button class="btn material-symbols-outlined">thumb_up</button>
+                <button class="btn material-symbols-outlined">comment</button>
+                <button class="btn material-symbols-outlined">share</button>
+            </div>
+        </section>
+        <section id="feed">
+            <div class="idPerfil">
+                <div id="perfilLink">
+                    <img src="/img/350093882_222349753918133_5370605897052269088_n.jpg" alt="foto de perfil" class="fotos">
+                    <label for="foto" class="nome">Maka News</label>
+                </div>
+                <span class="material-symbols-outlined" id="ocult">close</span>
+            </div>
+            <div class="conteudo">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis, hic veritatis eum rem maiores beatae culpa vero ad minus, similique nulla perferendis praesentium. Consectetur, magnam non tenetur dicta dolores reprehenderit?</p>
+            </div>
+            <div class="reacoes">
+                <button class="btn material-symbols-outlined">thumb_up</button>
+                <button class="btn material-symbols-outlined">comment</button>
+                <button class="btn material-symbols-outlined">share</button>
+            </div>
+        </section>
+        <section id="feed">
+            <div class="idPerfil">
+                <div id="perfilLink">
+                    <img src="/img/350093882_222349753918133_5370605897052269088_n.jpg" alt="foto de perfil" class="fotos">
+                    <label for="foto" class="nome">Maka News</label>
+                </div>
+                <span class="material-symbols-outlined" id="ocult">close</span>
+            </div>
+            <div class="conteudo">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis, hic veritatis eum rem maiores beatae culpa vero ad minus, similique nulla perferendis praesentium. Consectetur, magnam non tenetur dicta dolores reprehenderit?</p>
+            </div>
+            <div class="reacoes">
+                <button class="btn material-symbols-outlined">thumb_up</button>
+                <button class="btn material-symbols-outlined">comment</button>
+                <button class="btn material-symbols-outlined">share</button>
+            </div>
+        </section>
+        <section id="feed">
+            <div class="idPerfil">
+                <div id="perfilLink">
+                    <img src="/img/350093882_222349753918133_5370605897052269088_n.jpg" alt="foto de perfil" class="fotos">
+                    <label for="foto" class="nome">Maka News</label>
+                </div>
+                <span class="material-symbols-outlined" id="ocult">close</span>
+            </div>
+            <div class="conteudo">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis, hic veritatis eum rem maiores beatae culpa vero ad minus, similique nulla perferendis praesentium. Consectetur, magnam non tenetur dicta dolores reprehenderit?</p>
+            </div>
+            <div class="reacoes">
+                <button class="btn material-symbols-outlined">thumb_up</button>
+                <button class="btn material-symbols-outlined">comment</button>
+                <button class="btn material-symbols-outlined">share</button>
+            </div>
+        </section>
+        <section id="feed">
+            <div class="idPerfil">
+                <div id="perfilLink">
+                    <img src="/img/350093882_222349753918133_5370605897052269088_n.jpg" alt="foto de perfil" class="fotos">
+                    <label for="foto" class="nome">Maka News</label>
+                </div>
+                <span class="material-symbols-outlined" id="ocult">close</span>
+            </div>
+            <div class="conteudo">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis, hic veritatis eum rem maiores beatae culpa vero ad minus, similique nulla perferendis praesentium. Consectetur, magnam non tenetur dicta dolores reprehenderit?</p>
+            </div>
+            <div class="reacoes">
+                <button class="btn material-symbols-outlined">thumb_up</button>
+                <button class="btn material-symbols-outlined">comment</button>
+                <button class="btn material-symbols-outlined">share</button>
+            </div>
+        </section>
+        <section id="feed">
+            <div class="idPerfil">
+                <div id="perfilLink">
+                    <img src="/img/350093882_222349753918133_5370605897052269088_n.jpg" alt="foto de perfil" class="fotos">
+                    <label for="foto" class="nome">Maka News</label>
+                </div>
+                <span class="material-symbols-outlined" id="ocult">close</span>
+            </div>
+            <div class="conteudo">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis, hic veritatis eum rem maiores beatae culpa vero ad minus, similique nulla perferendis praesentium. Consectetur, magnam non tenetur dicta dolores reprehenderit?</p>
+            </div>
+            <div class="reacoes">
+                <button class="btn material-symbols-outlined">thumb_up</button>
+                <button class="btn material-symbols-outlined">comment</button>
+                <button class="btn material-symbols-outlined">share</button>
+            </div>
+        </section>
+        <section id="feed">
+            <div class="idPerfil">
+                <div id="perfilLink">
+                    <img src="/img/350093882_222349753918133_5370605897052269088_n.jpg" alt="foto de perfil" class="fotos">
+                    <label for="foto" class="nome">Maka News</label>
+                </div>
+                <span class="material-symbols-outlined" id="ocult">close</span>
+            </div>
+            <div class="conteudo">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis, hic veritatis eum rem maiores beatae culpa vero ad minus, similique nulla perferendis praesentium. Consectetur, magnam non tenetur dicta dolores reprehenderit?</p>
+            </div>
+            <div class="reacoes">
+                <button class="btn material-symbols-outlined">thumb_up</button>
+                <button class="btn material-symbols-outlined">comment</button>
+                <button class="btn material-symbols-outlined">share</button>
+            </div>
+        </section>
+        <section id="feed">
+            <div class="idPerfil">
+                <div id="perfilLink">
+                    <img src="/img/350093882_222349753918133_5370605897052269088_n.jpg" alt="foto de perfil" class="fotos">
+                    <label for="foto" class="nome">Maka News</label>
+                </div>
+                <span class="material-symbols-outlined" id="ocult">close</span>
+            </div>
+            <div class="conteudo">
+                <p>Veja o Nosso logotipo gent, muito bom</p>
+                <img src="/img/350093882_222349753918133_5370605897052269088_n.jpg" alt="fotos" class="fotos">
             </div>
             <div class="reacoes">
                 <button class="btn material-symbols-outlined">thumb_up</button>
