--- a/PagInicial/index.html
+++ b/PagInicial/index.html
@@ -23,13 +23,12 @@
                           <nav id="nav-menu">
                                 <ul id="menu-escondido" class="inicio">
                                     <li id="up-li"><img src="/img/350093882_222349753918133_5370605897052269088_n.jpg" alt="fotoperfil"></li>
-                                    
-                                    <li class="li-normal">Horários</li>
                                     <li class="li-normal">Professores</li>
+                                    <li class="li-normal">Horários</li>
                                     <li class="li-normal">Notícias</li>
                                     <li class="li-normal">Modo Escuro</li>
-                                    <li id="Def" class="li-normal">Definições </li>
-                                    <li class="li-normal">Ver Termos</li>
+                                    <li class="li-normal">Informações</li>
+                                    <li class="li-normal">Ajuda</li>
                                     <li id="bottom-li" class="li-normal">Terminar Sessão</li>
                                 </ul>
                             </nav>
@@ -80,7 +79,7 @@
         <section id="feed">
             <div class="idPerfil">
                 <div id="perfilLink">
-                    <img src="/img/350093882_222349753918133_5370605897052269088_n.jpg" alt="foto de perfil" class="fotos">
+                    <img src="../img/350093882_222349753918133_5370605897052269088_n.jpg" alt="foto de perfil" class="fotos">
                     <label for="foto" class="nome">Maka News</label>
                 </div>
                 <span class="material-symbols-outlined" id="ocult">close</span>
@@ -117,8 +116,8 @@
             <div>
                 <span class="material-symbols-outlined icon-footer-acima">add</span>
             </div>
-            <span class="material-symbols-outlined footer-icon icon1">sms</span>
-            <span class="material-symbols-outlined footer-icon icon2">settings</span>
+            <span class="material-symbols-outlined footer-icon icon1">settings</span>
+            <span class="material-symbols-outlined footer-icon icon2">sms</span>
         </section>
     </footer>
     <script src="open.js"></script>
