--- a/PagInicial/index.html
+++ b/PagInicial/index.html
@@ -22,7 +22,7 @@
                     
                           <nav id="nav-menu">
                                 <ul id="menu-escondido" class="inicio">
-                                    <li id="up-li"><img src="/img/350093882_222349753918133_5370605897052269088_n.jpg" alt="fotoperfil"></li>
+                                    <li id="up-li"><img src="../img/350093882_222349753918133_5370605897052269088_n.jpg" alt="fotoperfil"></li>
                                     <li class="li-normal">Professores</li>
                                     <li class="li-normal">Horários</li>
                                     <li class="li-normal">Notícias</li>
@@ -62,7 +62,7 @@
         <section id="feed">
             <div class="idPerfil">
                 <div id="perfilLink">
-                    <img src="/img/350093882_222349753918133_5370605897052269088_n.jpg" alt="foto de perfil" class="fotos">
+                    <img src="../img/350093882_222349753918133_5370605897052269088_n.jpg" alt="foto de perfil" class="fotos">
                     <label for="foto" class="nome">Maka News</label>
                 </div>
                 <span class="material-symbols-outlined" id="ocult">close</span>
@@ -96,7 +96,7 @@
         <section id="feed">
             <div class="idPerfil">
                 <div id="perfilLink">
-                    <img src="/img/350093882_222349753918133_5370605897052269088_n.jpg" alt="foto de perfil" class="fotos">
+                    <img src="../img/350093882_222349753918133_5370605897052269088_n.jpg" alt="foto de perfil" class="fotos">
                     <label for="foto" class="nome">Maka News</label>
                 </div>
                 <span class="material-symbols-outlined" id="ocult">close</span>
