--- a/PagInicial/index.html
+++ b/PagInicial/index.html
@@ -117,7 +117,7 @@
                 <span class="material-symbols-outlined icon-footer-acima">add</span>
             </div>
             <span class="material-symbols-outlined footer-icon icon1">settings</span>
-            <span class="material-symbols-outlined footer-icon icon2">chat</span>
+            <span class="material-symbols-outlined footer-icon icon2" onclick="abrirLink()">chat</span>
         </section>
     </footer>
     <script src="open.js"></script>
