--- a/PagInicial/Chat.html
+++ b/PagInicial/Chat.html
@@ -25,9 +25,10 @@
             <div class="foto-e-nome">
                 <img src="../img/350093882_222349753918133_5370605897052269088_n.jpg" alt="fotos" class="fotos">
                 <p class="nome">Maka News</p>
+                <p class="nome" id="sms">Site disponivel...</p>
             </div>
             <div class="data">
-                
+
             </div>
         </section>
     </main>
